# imagenate

./: .gitignore  README.md  setup.cfg  setup.py
docs/: samples.md
src/imagenate/: __init__.py  __main__.py  concat.py  const.py  create.py  info.py  resize.py
src/imagenate/libs/: const.py  enum.py  share.py
src/imagenate/main/: concat.py  create.py  info.py  resize.py  share.py
src/tests/: test_imagenate.py
tests/: test_imagenate_concat.py  test_imagenate_info.py
tests/assets/: dummy.txt
