[metadata]
# パッケージ名
name = imagenate
# バージョンはモジュールから持ってくる
version = attr:src.imagenate.__version__
# パッケージ情報の存在するURL
url = https://github.com/foo/bar
# 作成者
author = awisu2
# 作成者email
author_email = awisu2@gmail.com
# ライセンス
license = MIT

[options]
packages = find:
package_dir = 
    =src
# # entry_pointの設定を外部ファイルにする場合
# entry_points = file: entry_points.cfg

# 関数系の引数は別途セクションを設ける
[options.packages.find]
where=src

# entry_pointを直接書くときはこちら
[options.entry_points]
console_scripts =
  imagenate = imagenate.__main__:main
