[metadata]
# パッケージ名
name = imagenate
# バージョンはモジュールから持ってくる
version = attr:src.imagenate.__version__
# パッケージ情報の存在するURL
url = https://github.com/awisu2/imagenatepy
# 作成者
author = awisu2
# 作成者email
author_email = awisu2@gmail.com
# ライセンス
license = MIT

[options]
# installした際にzipのまま扱うことを許可するフラグ
#
# zip展開込みにすることでバグるのも嫌なのでFalseにしとけばいいと思う
#
zip_safe = False

# 設定したファイルをパッケージに含める
# include_package_data

# 対象となるpackageリスト
packages = find:

# モジュールの対応リスト
#
# =srcはルート
# foo=barとするとfooモジュールをbarディレクトリ相当にするという意味になる
#
package_dir = 
  =src

# entry_pointの設定を外部ファイルにする場合
# entry_points = file: entry_points.cfg

# 同時にインストールするパッケージリスト
#
# バージョン固定にしてインストール出来ないのも困るので、ある程度ゆるく指定しておく
#
install_requires =
  Pillow

# テストモジュールのあるディレクトリ
test_suite=tests


# options.packages = find: の引数
[options.packages.find]
where=src

# entry_pointを直接記載
[options.entry_points]
console_scripts =
  imagenate = imagenate.__main__:main

# オプション付きで追加インストールされるパッケージリスト
#
# 以下の場合だと、`pip install -e .[dev]`とする子おtでpytestが追加インストールされる
#
[options.extras_require]
dev =
    pytest>=3
